新增彩票界面，未完成
新增彩票界面，未完成

--- a/DDAYGO/en.lproj/Localizable.strings
+++ b/DDAYGO/en.lproj/Localizable.strings
@@ -69,6 +69,8 @@
 "Edit" = "Edit";
 "Select All" = "Select All";
 "TotalRMB:" = "TotalRMB:";
+"Complete" = "Complete";
+
 
 "Clearing(0)" = "Clearing(0)";
 "You have not selected goods " = "You have not selected goods ";
