--- a/DDAYGO/zh-Hans.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hans.lproj/Localizable.strings
@@ -33,6 +33,7 @@
  * */
 "Shopping" = "购物车";
 "Edit" = "编辑";
+"omplete" = "完成";
 "Select All" = "全选";
 "TotalRMB:" = "合计RMB:";
 "Clearing(0)" = "结算(0)";
