--- a/DDAYGO/zh-Hant.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hant.lproj/Localizable.strings
@@ -33,6 +33,7 @@
  * */
 "Shopping" = "購物車";
 "Edit" = "編輯";
+"omplete" = "完成";
 "Select All" = "全選";
 "TotalRMB:" = "合計RMB:";
 "Clearing(0)" = "結算(0)";
