--- a/DDAYGO/en.lproj/Localizable.strings
+++ b/DDAYGO/en.lproj/Localizable.strings
@@ -68,7 +68,7 @@
 "Shopping" = "Shopping";
 "Edit" = "Edit";
 "Select All" = "Select All";
-"TotalRMB:" = "TotalRMB:";
+"TotalRMB:" = "Total";
 "Complete" = "Complete";
 
 
