完成修改密码
完成修改密码

--- a/DDAYGO/ViewController/My/MyHomePage/zh-Hant.lproj/MyViewController.strings
+++ b/DDAYGO/ViewController/My/MyHomePage/zh-Hant.lproj/MyViewController.strings
@@ -15,13 +15,13 @@
 "Cuy-R3-aqA.text" = "關注店鋪";
 
 /* Class = "UIButton"; normalTitle = "最新消息(5)"; ObjectID = "JEK-Cu-7Lb"; */
-"JEK-Cu-7Lb.normalTitle" = "最新消息(5)";
+"JEK-Cu-7Lb.normalTitle" = "最新消息(0)";
 
 /* Class = "UILabel"; text = "136"; ObjectID = "Nxl-dy-Fb1"; */
 "Nxl-dy-Fb1.text" = "136";
 
 /* Class = "UIButton"; normalTitle = "扫一扫"; ObjectID = "SzE-mi-64s"; */
-"SzE-mi-64s.normalTitle" = "掃描";
+"SzE-mi-64s.normalTitle" = "掃一掃";
 
 /* Class = "UILabel"; text = "johb Smith"; ObjectID = "Yfb-7E-S8p"; */
 "Yfb-7E-S8p.text" = "johb Smith";
