修改赏金彩所有界面
修改赏金彩所有界面（数据没改），只能摸瞎改

--- a/DDAYGO/en.lproj/Localizable.strings
+++ b/DDAYGO/en.lproj/Localizable.strings
@@ -68,7 +68,7 @@
 "Shopping" = "Shopping";
 "Edit" = "Edit";
 "Select All" = "Select All";
-"TotalRMB:" = "Total";
+"Total" = "Total";
 "Complete" = "Complete";
 
 
