--- a/DDAYGO/zh-Hans.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hans.lproj/Localizable.strings
@@ -35,7 +35,7 @@
 "Edit" = "编辑";
 "omplete" = "完成";
 "Select All" = "全选";
-"TotalRMB:" = "合计";
+"Total" = "合计";
 "Clearing(0)" = "结算(0)";
 "You have not selected goods " = "您还没有选择宝贝哦";
 /*****************/
