--- a/DDAYGO/zh-Hant.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hant.lproj/Localizable.strings
@@ -35,7 +35,7 @@
 "Edit" = "編輯";
 "omplete" = "完成";
 "Select All" = "全選";
-"TotalRMB:" = "合計";
+"Total" = "合計";
 "Clearing(0)" = "結算(0)";
 "You have not selected goods " = "您還沒有選擇寶貝喔";
 /*****************/
