--- a/DDAYGO/en.lproj/Localizable.strings
+++ b/DDAYGO/en.lproj/Localizable.strings
@@ -18,8 +18,9 @@
 "Best-selling products" = "Best-selling products";
 "erchandise" = "erchandise";
 "More erchandise" = "More erchandise";
-"" = "";
-"" = "";
+"Server link failed" = "Server link failed";
+"Once logged in, no other countries will be supported" = "Once logged in, no other countries will be supported";
+"Taiwan" = "Taiwan";
 "" = "";
 "" = "";
 "" = "";
