--- a/DDAYGO/zh-Hans.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hans.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "Thailand" = "泰国";
 "Vietnam" = "越南";
 "Cancel" = "取消";
+"Taiwan" = "台湾";
+"Server link failed" = "服务器链接失败";
+"Once logged in, no other countries will be supported" = "登录成功后，暂不支持更换其他国家";
 "Select erchandise ach Month" = "每月精选商品";
 "Best-selling products" = "热销商品";
 "erchandise" = "精选商品";
