--- a/DDAYGO/ViewController/My/Setting/SetHomePage/zh-Hans.lproj/SettingViewController.strings
+++ b/DDAYGO/ViewController/My/Setting/SetHomePage/zh-Hans.lproj/SettingViewController.strings
@@ -8,12 +8,6 @@
 /* Class = "UIButton"; normalTitle = "绑定ICUE账号"; ObjectID = "GTw-o1-YLZ"; */
 "GTw-o1-YLZ.normalTitle" = "绑定ICUE账号";
 
-/* Class = "UIButton"; normalTitle = "男"; ObjectID = "JlW-SS-5Mu"; */
-"JlW-SS-5Mu.normalTitle" = "男";
-
-/* Class = "UILabel"; text = "Pipizhen26"; ObjectID = "KlA-8m-EzM"; */
-"KlA-8m-EzM.text" = "Pipizhen26";
-
 /* Class = "UIButton"; normalTitle = "账号"; ObjectID = "M6W-vh-Awz"; */
 "M6W-vh-Awz.normalTitle" = "账号";
 
@@ -26,17 +20,14 @@
 /* Class = "UIButton"; normalTitle = "昵称"; ObjectID = "djq-6N-dQQ"; */
 "djq-6N-dQQ.normalTitle" = "昵称";
 
-/* Class = "UIButton"; normalTitle = "女"; ObjectID = "e8s-H7-s4G"; */
-"e8s-H7-s4G.normalTitle" = "女";
-
 /* Class = "UIButton"; normalTitle = "绑定邮箱"; ObjectID = "faS-hm-H7E"; */
 "faS-hm-H7E.normalTitle" = "绑定邮箱";
+
+/* Class = "UIButton"; normalTitle = "绑定介绍人"; ObjectID = "lIK-lF-bcl"; */
+"lIK-lF-bcl.normalTitle" = "绑定介绍人";
 
 /* Class = "UIButton"; normalTitle = "登出 "; ObjectID = "od5-OI-OX3"; */
 "od5-OI-OX3.normalTitle" = "登出 ";
 
 /* Class = "UILabel"; text = "性别"; ObjectID = "uAo-vs-cWY"; */
 "uAo-vs-cWY.text" = "性别";
-
-/* Class = "UILabel"; text = "LiLian"; ObjectID = "zHZ-mp-Ts3"; */
-"zHZ-mp-Ts3.text" = "LiLian";
