--- a/DDAYGO/ViewController/My/MyHomePage/en.lproj/MyViewController.strings
+++ b/DDAYGO/ViewController/My/MyHomePage/en.lproj/MyViewController.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UIButton"; normalTitle = "商店管理"; ObjectID = "55u-GW-AOe"; */
-"55u-GW-AOe.normalTitle" = "store management";
+"55u-GW-AOe.normalTitle" = "Store management";
 
 /* Class = "UILabel"; text = ")"; ObjectID = "58r-Uf-XLQ"; */
 "58r-Uf-XLQ.text" = ")";
@@ -17,8 +17,8 @@
 /* Class = "UILabel"; text = "("; ObjectID = "EYd-Rv-7Up"; */
 "EYd-Rv-7Up.text" = "(";
 
-/* Class = "UIButton"; normalTitle = "申请成为供货商"; ObjectID = "PW7-pe-KJH"; */
-"PW7-pe-KJH.normalTitle" = "Apply become supplier";
+/* Class = "UILabel"; text = "1111100"; ObjectID = "N31-ty-HnO"; */
+"N31-ty-HnO.text" = "";
 
 /* Class = "UIButton"; normalTitle = "扫一扫"; ObjectID = "SzE-mi-64s"; */
 "SzE-mi-64s.normalTitle" = "Scanning";
@@ -28,6 +28,9 @@
 
 /* Class = "UIButton"; normalTitle = "促销彩"; ObjectID = "Yq7-mx-siu"; */
 "Yq7-mx-siu.normalTitle" = "Sales promotion";
+
+/* Class = "UILabel"; text = "申請成為供貨商"; ObjectID = "dSx-Sb-nWM"; */
+"dSx-Sb-nWM.text" = "Apply become suppller";
 
 /* Class = "UILabel"; text = "0"; ObjectID = "wKB-1F-Lrk"; */
 "wKB-1F-Lrk.text" = "0";
