完成其他小BUG
完成其他小BUG

--- a/DDAYGO/zh-Hans.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hans.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "Select" = "全选";
 "Total" = "合计";
 "delete" = "完成";
+"Complete" = "完成";
 "settlement" = "结算";
 "Clearing(0)" = "结算(0)";
 "You have not selected goods " = "您还没有选择宝贝哦";
