--- a/DDAYGO/zh-Hant.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hant.lproj/Localizable.strings
@@ -42,6 +42,7 @@
 "Total" = "合計";
 "delete" = "完成";
 "settlement" = "结算";
+"Complete" = "完成";
 "Clearing(0)" = "結算(0)";
 "You have not selected goods " = "您還沒有選擇寶貝喔";
 /*****************/
