修改國際化
修改國際化

--- a/DDAYGO/en.lproj/Localizable.strings
+++ b/DDAYGO/en.lproj/Localizable.strings
@@ -96,6 +96,11 @@
  * */
 //"" = "";
 "Order" = "Order";
+"all" = "all";
+"Waiting payment" = "Waiting payment";
+"Wait delivery" = "Wait delivery";
+"Waiting goods" = "Waiting goods";
+"evaluation" = "evaluation";
 "" = "";
 "" = "";
 "" = "";
