--- a/DDAYGO/zh-Hant.lproj/Localizable.strings
+++ b/DDAYGO/zh-Hant.lproj/Localizable.strings
@@ -50,7 +50,11 @@
  * 订单
  * */
 "Order" = "訂單";
-
+"all" = "全部";
+"Waiting payment" = "待付款";
+"Wait delivery" = "待發貨";
+"Waiting goods" = "待收貨";
+"evaluation" = "評價";
 /*****************/
 /* *
  * 我的
